# populate-secrets-gitlab

./: .gitignore  CHANGELOG.md  README.md  __init__.py  pyproject.toml  release-please-config.json  requirements.txt  setup.py
.github/workflows/: check.yml  release-please.yml  release.yml
src/populate_secrets_gitlab/: __main__.py  app.py  gitlab_server.py  util.py
tests/: test_app.py  test_util.py
